add species details enrichment endpoint
